--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h1>Typing Speed Test</h1>
 
-        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div>
+        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
 
         <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
 
@@ -40,11 +40,8 @@
                 <option value="10s">10-Second Challenge Mode</option>
                 <option value="5s-lives">5-Second Challenge Mode with Lives</option>
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
-                <option value="7s-lives">7-Second Challenge Mode with Lives</option>
-                <option value="2s-lives">2-Second Challenge Mode with Lives</option>
-                <option value="15s">15-Second Challenge Mode</option>
-                <option value="30s-lives">30-Second Mode with Lives</option>
-                <option value="1s-lives">1-Second Challenge Mode with Lives</option>
+                <option value="7s-lives">7-Second Challenge Mode with Lives</option> <!-- New Mode -->
+                <option value="2s-lives">2-Second Challenge Mode with Lives</option> <!-- New Mode -->
             </select>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
