--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 
 <head>
@@ -40,9 +40,18 @@
                 <option value="10s">10-Second Challenge Mode</option>
                 <option value="5s-lives">5-Second Challenge Mode with Lives</option>
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
-                <option value="7s-lives">7-Second Challenge Mode with Lives</option> <!-- New Mode -->
-                <option value="2s-lives">2-Second Challenge Mode with Lives</option> <!-- New Mode -->
+                <option value="7s-lives">7-Second Challenge Mode with Lives</option>
+                <option value="2s-lives">2-Second Challenge Mode with Lives</option>
+
+                <!-- Additional modes -->
+                <option value="90s">90-Second Mode</option>
+                <option value="120s">120-Second Mode</option>
+                <option value="15s">15-Second Challenge Mode</option>
+                <option value="30s-lives">30-Second Challenge Mode with Lives</option>
+                <option value="random">Random Time Mode</option>
+                <option value="sudden-death">Sudden Death Mode (1 life only)</option>
             </select>
+
 
             <label for="dark-mode-toggle">Dark Mode:</label>
             <input type="checkbox" id="dark-mode-toggle" class="dark-mode-toggle"> Dark Mode
