--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@
             <label for="mode-select">Select Mode:</label>
             <select id="mode-select" class="mode-select">
                 <option value="60s">60-Second Mode</option>
-                <option value="20s">20-Second Challenge Mode</option> <!-- New Mode -->
-                <option value="15s">15-Second Challenge Mode</option> <!-- New Mode -->
+                <option value="30s">30-Second Mode</option> <!-- New Mode -->
+                <option value="45s">45-Second Mode</option> <!-- New Mode -->
+                <option value="90s">90-Second Mode</option> <!-- New Mode -->
+                <option value="20s">20-Second Challenge Mode</option>
+                <option value="15s">15-Second Challenge Mode</option>
                 <option value="10s">10-Second Challenge Mode</option>
                 <option value="5s-lives">5-Second Challenge Mode with Lives</option>
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
                 <option value="7s-lives">7-Second Challenge Mode with Lives</option>
-                <option value="8s-lives">8-Second Challenge Mode with Lives</option> <!-- New Mode -->
+                <option value="8s-lives">8-Second Challenge Mode with Lives</option>
                 <option value="2s-lives">2-Second Challenge Mode with Lives</option>
+                <option value="60s-lives">1-Minute with Lives</option> <!-- New Mode -->
             </select>
+
 
 
 
