--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="container">
         <h1>Typing Speed Test</h1>
 
-        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
+        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div>
 
-        <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
+        <div id="menu-toggle" class="menu-toggle">&#9776;</div>
 
         <div id="game-info">
             <div id="game-stats">
                 Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
             </div>
 
-            <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div> <!-- Life display, hidden by default -->
+            <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div>
         </div>
 
         <div id="word-display" class="word-display"></div>
@@ -30,29 +30,29 @@
         <button id="start-btn" class="start-btn">Start Game</button>
         <div id="result-message"></div>
 
-        <!-- Side Menu -->
         <div id="side-menu" class="side-menu">
             <button id="close-menu" class="close-menu">&times;</button>
             <h2>Settings</h2>
             <label for="mode-select">Select Mode:</label>
             <select id="mode-select" class="mode-select">
                 <option value="60s">60-Second Mode</option>
-                <option value="30s">30-Second Mode</option> <!-- New Mode -->
-                <option value="45s">45-Second Mode</option> <!-- New Mode -->
-                <option value="90s">90-Second Mode</option> <!-- New Mode -->
-                <option value="20s">20-Second Challenge Mode</option>
-                <option value="15s">15-Second Challenge Mode</option>
                 <option value="10s">10-Second Challenge Mode</option>
                 <option value="5s-lives">5-Second Challenge Mode with Lives</option>
                 <option value="3s-lives">3-Second Challenge Mode with Lives</option>
                 <option value="7s-lives">7-Second Challenge Mode with Lives</option>
-                <option value="8s-lives">8-Second Challenge Mode with Lives</option>
                 <option value="2s-lives">2-Second Challenge Mode with Lives</option>
-                <option value="60s-lives">1-Minute with Lives</option> <!-- New Mode -->
+                <option value="1s-lives">1-Second Extreme Mode</option> <!-- New Mode -->
+                <option value="30s">30-Second Mode</option> <!-- New Mode -->
+                <option value="custom">Custom Mode</option> <!-- Custom Mode -->
             </select>
 
-
-
+            <!-- Custom Mode Input Fields -->
+            <div id="custom-settings" style="display:none;">
+                <label for="custom-time">Time (seconds):</label>
+                <input type="number" id="custom-time" min="1" max="300" value="60">
+                <label for="custom-lives">Lives:</label>
+                <input type="number" id="custom-lives" min="1" max="10" value="3">
+            </div>
 
             <label for="dark-mode-toggle">Dark Mode:</label>
             <input type="checkbox" id="dark-mode-toggle" class="dark-mode-toggle"> Dark Mode
