--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 </head>
 
 <body>
-
     <div class="container">
         <h1>Typing Speed Test</h1>
-
-        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div> <!-- Dynamic Mode Display -->
-
-        <div id="menu-toggle" class="menu-toggle">&#9776;</div> <!-- Hamburger Menu -->
+        <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div>
+        <div id="menu-toggle" class="menu-toggle">&#9776;</div>
 
         <div id="game-info">
             <div id="game-stats">
                 Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
             </div>
-
-            <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div> <!-- Life display, hidden by default -->
+            <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div>
         </div>
 
         <div id="word-display" class="word-display"></div>
@@ -47,7 +43,7 @@
 
             <label for="custom-time" id="custom-time-label" style="display:none;">Custom Time (seconds):</label>
             <input type="number" id="custom-time" style="display:none;" min="1" max="300" placeholder="Enter time in seconds">
-            
+
             <label for="dark-mode-toggle">Dark Mode:</label>
             <input type="checkbox" id="dark-mode-toggle" class="dark-mode-toggle"> Dark Mode
         </div>
