--- a/index.html
+++ b/index.html
@@ -9,24 +9,33 @@
 </head>
 
 <body>
+
     <div class="container">
         <h1>Typing Speed Test</h1>
+
         <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div>
+
         <div id="menu-toggle" class="menu-toggle">&#9776;</div>
 
         <div id="game-info">
             <div id="game-stats">
                 Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
             </div>
+
             <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div>
         </div>
 
         <div id="word-display" class="word-display"></div>
         <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
-        <button id="start-btn" class="start-btn">Start Game</button>
+
+        <!-- Button container to hold the Start and Restart buttons -->
+        <div class="button-container">
+            <button id="start-btn" class="start-btn">Start Game</button>
+            <button id="restart-btn" class="restart-btn" disabled>Restart</button> <!-- Restart button added -->
+        </div>
+
         <div id="result-message"></div>
 
-        <!-- Side Menu -->
         <div id="side-menu" class="side-menu">
             <button id="close-menu" class="close-menu">&times;</button>
             <h2>Settings</h2>
