--- a/index.html
+++ b/index.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Speed Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
     <div class="container">
         <h1>Typing Speed Test</h1>
-
         <div id="current-mode-display" class="mode-display">Mode: 60-Second Mode</div>
-
         <div id="menu-toggle" class="menu-toggle">&#9776;</div>
-
         <div id="game-info">
             <div id="game-stats">
                 Time: <span id="time-left">60</span> seconds | Score: <span id="score-value">0</span> | TPS: <span id="tps-value">0.00</span>
             </div>
-
             <div id="lives" style="display:none;">Lives: <span id="lives-value">3</span></div>
         </div>
-
         <div id="word-display" class="word-display"></div>
-        <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus>
-
-        <!-- Button container to hold the Start and Restart buttons -->
-        <div class="button-container">
-            <button id="start-btn" class="start-btn">Start Game</button>
-            <button id="restart-btn" class="restart-btn" disabled>Restart</button> <!-- Restart button added -->
+        <input type="text" id="word-input" class="word-input" placeholder="Type here..." autofocus disabled>
+        
+        <!-- Dropdown Menu for Start/Restart buttons -->
+        <div class="dropdown">
+            <button class="dropbtn">Game Controls</button>
+            <div class="dropdown-content">
+                <button id="start-btn" class="start-btn">Start Game</button>
+                <button id="restart-btn" class="restart-btn" disabled>Restart Game</button>
+            </div>
         </div>
-
+        
         <div id="result-message"></div>
-
         <div id="side-menu" class="side-menu">
             <button id="close-menu" class="close-menu">&times;</button>
             <h2>Settings</h2>
@@ -49,16 +43,12 @@
                 <option value="2s-lives">2-Second Challenge Mode with Lives</option>
                 <option value="custom">Custom Mode</option>
             </select>
-
             <label for="custom-time" id="custom-time-label" style="display:none;">Custom Time (seconds):</label>
             <input type="number" id="custom-time" style="display:none;" min="1" max="300" placeholder="Enter time in seconds">
-
             <label for="dark-mode-toggle">Dark Mode:</label>
             <input type="checkbox" id="dark-mode-toggle" class="dark-mode-toggle"> Dark Mode
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
-
 </html>
